{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 104,
  "lineage": "a2a7594a-5794-9b3a-d8cd-57e01d6f8880",
  "resources": [
    {
      "module": "module.aws_eip[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e2b40fd3b242f71",
            "association_id": "eipassoc-017a028bc09e5ab17",
            "domain": "vpc",
            "id": "eipalloc-05e2b40fd3b242f71",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-020f9a34a2700b857",
            "private_dns": "ip-192-168-62-39.eu-north-1.compute.internal",
            "private_ip": "192.168.62.39",
            "public_dns": "ec2-16-16-82-68.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.82.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat1"
            },
            "tags_all": {
              "Name": "nat1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_eip[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3bd3404333271ac",
            "association_id": "eipassoc-0c9b01e121dfc062c",
            "domain": "vpc",
            "id": "eipalloc-0a3bd3404333271ac",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-02a17af29adc8d73f",
            "private_dns": "ip-192-168-128-233.eu-north-1.compute.internal",
            "private_ip": "192.168.128.233",
            "public_dns": "ec2-13-50-211-178.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.211.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat2"
            },
            "tags_all": {
              "Name": "nat2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:450477592783:internet-gateway/igw-0c53cdf33495115b9",
            "id": "igw-0c53cdf33495115b9",
            "owner_id": "450477592783",
            "tags": {
              "Name": "victorsgateway"
            },
            "tags_all": {
              "Name": "victorsgateway"
            },
            "vpc_id": "vpc-09ba9b9a5e165c2f5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nat_gateway[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e2b40fd3b242f71",
            "connectivity_type": "public",
            "id": "nat-005c77df4f7a96e41",
            "network_interface_id": "eni-020f9a34a2700b857",
            "private_ip": "192.168.62.39",
            "public_ip": "16.16.82.68",
            "subnet_id": "subnet-0d2f0a296700061d2",
            "tags": {
              "Name": "NAT1"
            },
            "tags_all": {
              "Name": "NAT1"
            }
          },
          "dependencies": [
            "module.aws_eip.aws_eip.nat1",
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_vpc.aws_vpc.main",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nat_gateway[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3bd3404333271ac",
            "connectivity_type": "public",
            "id": "nat-010bd524f0bcec89a",
            "network_interface_id": "eni-02a17af29adc8d73f",
            "private_ip": "192.168.128.233",
            "public_ip": "13.50.211.178",
            "subnet_id": "subnet-0da9ef3151837fb77",
            "tags": {
              "Name": "NAT2"
            },
            "tags_all": {
              "Name": "NAT2"
            }
          },
          "dependencies": [
            "module.aws_eip.aws_eip.nat1",
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_vpc.aws_vpc.main",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association_private[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e517ee9c97ec5f9a",
            "route_table_id": "rtb-06c51c0d0e45bbc02",
            "subnet_id": "subnet-08e277aed634782f9"
          },
          "dependencies": [
            "module.aws_eip.aws_eip.nat1",
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_route_table_private.aws_route_table.route_table_private",
            "module.aws_vpc.aws_vpc.main",
            "module.private_subnet.aws_subnet.private_subnet",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association_private[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069099a29a2d857e9",
            "route_table_id": "rtb-08af6269fb476dcf2",
            "subnet_id": "subnet-01ff3e84d53fbcf29"
          },
          "dependencies": [
            "module.aws_eip.aws_eip.nat1",
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_route_table_private.aws_route_table.route_table_private",
            "module.aws_vpc.aws_vpc.main",
            "module.private_subnet.aws_subnet.private_subnet",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association_public[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e8df73e651f3aec",
            "route_table_id": "rtb-00a4f9ed4f87909df",
            "subnet_id": "subnet-0d2f0a296700061d2"
          },
          "dependencies": [
            "module.aws_eip.aws_eip.nat1",
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_route_table_public.aws_route_table.route_table_public",
            "module.aws_vpc.aws_vpc.main",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_association_public[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048089471cfb46177",
            "route_table_id": "rtb-00a4f9ed4f87909df",
            "subnet_id": "subnet-0da9ef3151837fb77"
          },
          "dependencies": [
            "module.aws_eip.aws_eip.nat1",
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_route_table_public.aws_route_table.route_table_public",
            "module.aws_vpc.aws_vpc.main",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_private[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:450477592783:route-table/rtb-06c51c0d0e45bbc02",
            "id": "rtb-06c51c0d0e45bbc02",
            "owner_id": "450477592783",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-005c77df4f7a96e41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myprivateroute1"
            },
            "tags_all": {
              "Name": "myprivateroute1"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba9b9a5e165c2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_eip.aws_eip.nat1",
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_vpc.aws_vpc.main",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_private[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:450477592783:route-table/rtb-08af6269fb476dcf2",
            "id": "rtb-08af6269fb476dcf2",
            "owner_id": "450477592783",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-010bd524f0bcec89a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myprivateroute2"
            },
            "tags_all": {
              "Name": "myprivateroute2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba9b9a5e165c2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_eip.aws_eip.nat1",
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_vpc.aws_vpc.main",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:450477592783:route-table/rtb-00a4f9ed4f87909df",
            "id": "rtb-00a4f9ed4f87909df",
            "owner_id": "450477592783",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c53cdf33495115b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mypublicroute"
            },
            "tags_all": {
              "Name": "mypublicroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba9b9a5e165c2f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_eip.aws_eip.nat1",
            "module.aws_internet_gateway.aws_internet_gateway.name",
            "module.aws_nat_gateway.aws_nat_gateway.example",
            "module.aws_vpc.aws_vpc.main",
            "module.public_subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:450477592783:vpc/vpc-09ba9b9a5e165c2f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0fca510b7a9fda134",
            "default_route_table_id": "rtb-08fee65787ce419e1",
            "default_security_group_id": "sg-0c417f65adc88cb7d",
            "dhcp_options_id": "dopt-01287b56c4a82f9fe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ba9b9a5e165c2f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fee65787ce419e1",
            "owner_id": "450477592783",
            "tags": {
              "Name": "Victor_vpc_test"
            },
            "tags_all": {
              "Name": "Victor_vpc_test"
            }
          }
        }
      ]
    },
    {
      "module": "module.private_subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:450477592783:subnet/subnet-08e277aed634782f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e277aed634782f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450477592783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-north-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-eu-north-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09ba9b9a5e165c2f5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:450477592783:subnet/subnet-01ff3e84d53fbcf29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ff3e84d53fbcf29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450477592783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-north-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-eu-north-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09ba9b9a5e165c2f5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:450477592783:subnet/subnet-0d2f0a296700061d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2f0a296700061d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450477592783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-north-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu-north-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09ba9b9a5e165c2f5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:450477592783:subnet/subnet-0da9ef3151837fb77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da9ef3151837fb77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450477592783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-north-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu-north-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09ba9b9a5e165c2f5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}